Fixed style for blurry buttons

--- a/style.css
+++ b/style.css
@@ -436,7 +436,6 @@ input[type="submit"] {
 	font-size: 0.75rem;
 	line-height: 1;
 	padding: .6em 1em .4em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 }
 
 button:hover,
